--- a/home/css/about.css
+++ b/home/css/about.css
@@ -1,202 +1,63 @@
-
-
-
-/*轮播图li下标颜色*/
-.carousel-indicators .active{
-	background-color: #29CC5F!important;
+.jumbotron{
+	border-radius:0!important;
 }
+
 /*页面容器*/
-.body_box{
+.mainten{
 	background: #ffffff;
-	overflow: hidden;
+	position:relative;
+	bottom:3.2rem;
 }
-/*公用标题样式*/
+/*标题公用样式*/
 .col-md-4 h4{
-	background: yellow;
+	/*background: yellow;*/
+	color: #333333;
+	font-weight: bold;
+	line-height: 1.4;
 	font-weight: bold;
 }
-/*主营业务*/
-.index_top{
-	border: 1px solid black;
-	margin-top:4rem;
-	/*overflow: hidden;*/
+.mainten .f_start{
+	background:url(../img/f_strat.png)no-repeat center top;
 }
 
-.index_top .tab_box{
-	padding-top: 2.5rem;
-	
+.mainten .top-img{
+	margin-top:6rem;
 }
-
-.index_top .tab_box .tab_img{
-	width: 13.37rem;
-	height: 10rem;
-	background: #ffffff;
-	margin-bottom: 1.87rem;
-	cursor: pointer;
+.mainten .top-detail{
+	margin-top: 4rem;
+	margin-bottom: 6rem;
 }
-.index_top .tab_box .tab_img img{
-	transition: all .8s ease;
-}
-.index_top .tab_box .tab_img img:hover{
-	transform:rotate(360deg);
-	-ms-transform:rotate(360deg); 	/* IE 9 */
-	-moz-transform:rotate(360deg); 	/* Firefox */
-	-webkit-transform:rotate(360deg); /* Safari 和 Chrome */
-}
-.index_top .tab_box .tab_img small{
+.mainten .top-detail p{
 	color: #333333;
+	line-height: 1.8;
+}
+.mainten .title-one{
+	margin-bottom: 3.5rem;
 }
 
-/*创始人*/
-.index_middle{
-	border: 1px solid black;
-	margin-top: 4.37rem;
+.mainten .col-md-5 .de-title{
+	font-size: 1.12rem;
+	font-weight: bold;
+	color: #333333;
+	margin-bottom:.7rem;
 }
-.index_middle .col-md-10{
-	margin-top:2.5rem;
-}
-
-/*团队风采*/
-.index_bottom{
-	border: 1px solid black;
-	margin-top:4.37rem;
-}
-/*团队风采-->明星列表*/
-.index_bottom .start_list{
-	border: 1px solid #000066;
-	margin-top:2.5rem;
-	background-image: url(../img/xian.png);
-	background-repeat:no-repeat;
-	background-position:bottom center;
-	/*background-size:contain;*/
-}
-
-.index_bottom .start_list .col-md-3{
-	height: 25.12rem;
-	background:#ffffff;
-	margin: 4rem 0 4rem 0;
-	box-shadow: 0px 10px 15px #cccccc;
-	background-image:url(../img/top_title.png);
-	background-repeat:no-repeat;
-	background-position:5% 0%;
-}
-.index_bottom .start_list .col-md-3 #start_img{
-	width: 10rem;
-	height: 10rem;
-	border-radius: 50%;
-	border: 2px solid #28D964;
-}
-.index_bottom .start_list .col-md-3 #start_name{
-	color: red;
-	margin-bottom: 0!important;
-}
-.index_bottom .start_list .col-md-3 .start_num{
-	width: 70%;
-}
-
-/*最新要闻*/
-.index_news{
-	border: 1px solid black;
-	margin-top:4.37rem;
-	margin-bottom: 3rem;
-}
-.index_news .news_box{
-	border: 1px solid blue;
-	margin-top: 2.5rem;
-}
-/*新闻选项列表左*/
-.index_news .news_box .tab_list{
-	width: 61%;
-	border: 1px solid darkcyan;
-}
-.index_news .news_box .tab_list .more{
-	width: 100%;
-	text-align: center;
-	color: #666666;
-	font-size: 0.87rem;
-	border: 1px solid black;
-	cursor: pointer;
-}
-.index_news .news_box .tab_list ul{
-	width: 100%;
-	border: 1px solid red;
-}
-.index_news .news_box .tab_list ul li{
-	width: 100%;
-	transition: all .3s ease;
-}
-.index_news .news_box .tab_list ul li:hover{
-	box-shadow: 0px 4px 10px #b3b3b3;
-}
-.index_news .news_box .tab_list ul li:first-child{
-	margin-top: 0.93rem;
-	margin-bottom: 0.93rem;
-}
-.index_news .news_box .tab_list ul li .tab_img{
-	width: 25%;
-}
-
-.index_news .news_box .tab_list ul li .tab_detail{
-	width: 75%;
-}
-.index_news .news_box .tab_list ul li .tab_detail .title{
-	width: 85%;
-	margin: 0 auto;
-	overflow: hidden;
-	text-overflow:ellipsis;
-	white-space: nowrap;
-	transition: all .4s ease;
-}
-.index_news .news_box .tab_list ul li .tab_detail .title:hover{
-	color: #00ace6;
-}
-.index_news .news_box .tab_list ul li .tab_detail .contant{
-	width: 85%;
-	margin: 0 auto;
-	color: #999999;
-	font-size: 0.87rem;
-	display: -webkit-box;
-	-webkit-box-orient: vertical;
-	-webkit-line-clamp: 3;
-	overflow: hidden;
-}
-.index_news .news_box .tab_list ul li .tab_detail .date{
-	width: 85%;
-	margin: 0 auto;
-	color: #999999;
-	font-size: 0.87rem;
-
-}
-/*新闻列表右边*/
-.index_news .news_box .news_list{
-	width: 36%;
-	border: 1px solid seagreen;
-}
-
-.index_news .news_box .news_list .title{
-	width: 85%;
-	height: 15%;
-	margin-top: 0.93rem;
-}
-
-.index_news .news_box .news_list ul{
-	width: 85%;
-	height:90%;
-	margin-top: 0.62rem;
-}
-.index_news .news_box .news_list ul li{
-	margin-top: 0.62rem;
-}
-.index_news .news_box .news_list ul li p{
-	font-size: 1rem;
-	width: 80%;
-	overflow: hidden;
-	text-overflow:ellipsis;
-	white-space: nowrap;
+.mainten .col-md-5 .de-futitle{
+	font-size:0.75rem;
+	font-weight: bold;
+	color: #e4e4e4;
 	margin-bottom: 0;
-	transition: all .4s ease;
 }
-.index_news .news_box .news_list ul li p:hover{
-	color: #00ace6;
-	text-decoration: underline;
+.mainten .col-md-5 .de-paper{
+	font-size:0.87rem;
+	color: #333333;
+	margin-top:1.rem;
+	line-height: 1.8;
+}
+
+
+/*媒体查询*/
+@media only screen and (max-width:768px) {
+	.mainten .wen-detail{
+		margin-top: 1.8rem;
+	}
 }
